@@ -6,6 +6,8 @@ BETA PUBLIC RELEASE VERSION 1.4.1       4-29-09
     output if needed.
   * Enabled "Create APBS Input File" by default on the web server, so that 
     APBS calculation and visualization are more obvious to the users.
+  * Added warnings to stderr and the REMARK field in the output PQR file 
+    regarding multiple occupancy entries in PDB file.
 
  - BUG FIXES
   * Added -fno-stack-protector to CXXFLAGS in configure. This fixes the stack
